--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ description: > # this means to ignore newlines until "baseurl:"
   developers on a variety of subjects but focusing on big data,
   the semantic web, Node, Polymer, Docker and AWS.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+url: "http://youknowfordevs.com" # the base hostname & protocol for your site, e.g. http://example.com
 disqus:
   shortname: you-know-for-devs
 twitter_username: youknowfordevs
