--- a/_config.yml
+++ b/_config.yml
@@ -30,7 +30,7 @@ google_analytics: UA-2021717-4
 # Build settings
 markdown: kramdown
 theme: minima
-gems:
+plugins:
   - jekyll-feed
 exclude:
   - .env
